[tool.poetry]
name = "dndfog"
version = "0.5.0"
description = "DND battle map with fog of war"
authors = [
    "Matti Lamppu <lamppu.matti.akseli@gmail.com>",
]
packages = [
    { include = "dndfog" },
]
license = "MIT"
readme = "README.md"
homepage = "https://mrthearman.github.io/dndfog/"
repository = "https://github.com/MrThearMan/dndfog"
keywords = [
    "dnd",
    "fog",
    "war",
    "map",
    "combat",
    "infinite",
    "gird",
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = [
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "2.1.3"
pywin32 = "305"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
coverage = "6.5.0"
pre-commit = "3.1.0"
tox = "4.4.6"
tox-gh-actions = "3.0.0"
coveralls = "3.3.1"
pyinstaller = "5.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
pymdown-extensions = "9.9.2"
mkdocs-mermaid2-plugin = "0.6.0"

[tool.poetry.group.lint.dependencies]
mypy = "1.0.1"

[tool.poetry.scripts]
dndfog = "dndfog.main:start"

[tool.black]
line-length = 120

[tool.ruff]
fix = true
target-version = "py311"
line-length = 120
extend-exclude = [
    "tests",
]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "S",  # flake8-bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "T",  # flake8-print
    "W",  # pycodestyle warnings
]

[tool.mypy]
python_version = "3.11"
warn_return_any = "True"
warn_unused_configs = "True"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311
isolated_build = true

[gh-actions]
python =
    3.11: py311

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
commands =
    poetry install
    poetry run coverage run -m pytest -vv -s --log-cli-level=INFO
"""

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
